version_02_intermedia_01/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ID ID ( ) { Declarations Statements }
Rule 2     Declarations -> Declarations Declaration
Rule 3     Declarations -> Declaration
Rule 4     Declaration -> ID ID ;
Rule 5     Statements -> Statements Statement
Rule 6     Statements -> Statement
Rule 7     Statement -> Assignment
Rule 8     Assignment -> ID = Expression ;
Rule 9     Expression -> Expression + Term
Rule 10    Expression -> Term
Rule 11    Term -> Term * Factor
Rule 12    Term -> Factor
Rule 13    Factor -> INTLIT
Rule 14    Factor -> ID
Rule 15    Factor -> ( Expression )

Terminals, with rules where they appear

(                    : 1 15
)                    : 1 15
*                    : 11
+                    : 9
;                    : 4 8
=                    : 8
ID                   : 1 1 4 4 8 14
INTLIT               : 13
error                : 
{                    : 1
}                    : 1

Nonterminals, with rules where they appear

Assignment           : 7
Declaration          : 2 3
Declarations         : 1 2
Expression           : 8 9 15
Factor               : 11 12
Program              : 0
Statement            : 5 6
Statements           : 1 5
Term                 : 9 10 11

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ID ID ( ) { Declarations Statements }

    ID              shift and go to state 2

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ID . ID ( ) { Declarations Statements }

    ID              shift and go to state 3


state 3

    (1) Program -> ID ID . ( ) { Declarations Statements }

    (               shift and go to state 4


state 4

    (1) Program -> ID ID ( . ) { Declarations Statements }

    )               shift and go to state 5


state 5

    (1) Program -> ID ID ( ) . { Declarations Statements }

    {               shift and go to state 6


state 6

    (1) Program -> ID ID ( ) { . Declarations Statements }
    (2) Declarations -> . Declarations Declaration
    (3) Declarations -> . Declaration
    (4) Declaration -> . ID ID ;

    ID              shift and go to state 7

    Declarations                   shift and go to state 8
    Declaration                    shift and go to state 9

state 7

    (4) Declaration -> ID . ID ;

    ID              shift and go to state 10


state 8

    (1) Program -> ID ID ( ) { Declarations . Statements }
    (2) Declarations -> Declarations . Declaration
    (5) Statements -> . Statements Statement
    (6) Statements -> . Statement
    (4) Declaration -> . ID ID ;
    (7) Statement -> . Assignment
    (8) Assignment -> . ID = Expression ;

    ID              shift and go to state 11

    Statements                     shift and go to state 12
    Declaration                    shift and go to state 13
    Statement                      shift and go to state 14
    Assignment                     shift and go to state 15

state 9

    (3) Declarations -> Declaration .

    ID              reduce using rule 3 (Declarations -> Declaration .)


state 10

    (4) Declaration -> ID ID . ;

    ;               shift and go to state 16


state 11

    (4) Declaration -> ID . ID ;
    (8) Assignment -> ID . = Expression ;

    ID              shift and go to state 10
    =               shift and go to state 17


state 12

    (1) Program -> ID ID ( ) { Declarations Statements . }
    (5) Statements -> Statements . Statement
    (7) Statement -> . Assignment
    (8) Assignment -> . ID = Expression ;

    }               shift and go to state 19
    ID              shift and go to state 18

    Statement                      shift and go to state 20
    Assignment                     shift and go to state 15

state 13

    (2) Declarations -> Declarations Declaration .

    ID              reduce using rule 2 (Declarations -> Declarations Declaration .)


state 14

    (6) Statements -> Statement .

    }               reduce using rule 6 (Statements -> Statement .)
    ID              reduce using rule 6 (Statements -> Statement .)


state 15

    (7) Statement -> Assignment .

    }               reduce using rule 7 (Statement -> Assignment .)
    ID              reduce using rule 7 (Statement -> Assignment .)


state 16

    (4) Declaration -> ID ID ; .

    ID              reduce using rule 4 (Declaration -> ID ID ; .)


state 17

    (8) Assignment -> ID = . Expression ;
    (9) Expression -> . Expression + Term
    (10) Expression -> . Term
    (11) Term -> . Term * Factor
    (12) Term -> . Factor
    (13) Factor -> . INTLIT
    (14) Factor -> . ID
    (15) Factor -> . ( Expression )

    INTLIT          shift and go to state 25
    ID              shift and go to state 21
    (               shift and go to state 26

    Expression                     shift and go to state 22
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 18

    (8) Assignment -> ID . = Expression ;

    =               shift and go to state 17


state 19

    (1) Program -> ID ID ( ) { Declarations Statements } .

    $end            reduce using rule 1 (Program -> ID ID ( ) { Declarations Statements } .)


state 20

    (5) Statements -> Statements Statement .

    }               reduce using rule 5 (Statements -> Statements Statement .)
    ID              reduce using rule 5 (Statements -> Statements Statement .)


state 21

    (14) Factor -> ID .

    *               reduce using rule 14 (Factor -> ID .)
    ;               reduce using rule 14 (Factor -> ID .)
    +               reduce using rule 14 (Factor -> ID .)
    )               reduce using rule 14 (Factor -> ID .)


state 22

    (8) Assignment -> ID = Expression . ;
    (9) Expression -> Expression . + Term

    ;               shift and go to state 27
    +               shift and go to state 28


state 23

    (10) Expression -> Term .
    (11) Term -> Term . * Factor

    ;               reduce using rule 10 (Expression -> Term .)
    +               reduce using rule 10 (Expression -> Term .)
    )               reduce using rule 10 (Expression -> Term .)
    *               shift and go to state 29


state 24

    (12) Term -> Factor .

    *               reduce using rule 12 (Term -> Factor .)
    ;               reduce using rule 12 (Term -> Factor .)
    +               reduce using rule 12 (Term -> Factor .)
    )               reduce using rule 12 (Term -> Factor .)


state 25

    (13) Factor -> INTLIT .

    *               reduce using rule 13 (Factor -> INTLIT .)
    ;               reduce using rule 13 (Factor -> INTLIT .)
    +               reduce using rule 13 (Factor -> INTLIT .)
    )               reduce using rule 13 (Factor -> INTLIT .)


state 26

    (15) Factor -> ( . Expression )
    (9) Expression -> . Expression + Term
    (10) Expression -> . Term
    (11) Term -> . Term * Factor
    (12) Term -> . Factor
    (13) Factor -> . INTLIT
    (14) Factor -> . ID
    (15) Factor -> . ( Expression )

    INTLIT          shift and go to state 25
    ID              shift and go to state 21
    (               shift and go to state 26

    Expression                     shift and go to state 30
    Term                           shift and go to state 23
    Factor                         shift and go to state 24

state 27

    (8) Assignment -> ID = Expression ; .

    }               reduce using rule 8 (Assignment -> ID = Expression ; .)
    ID              reduce using rule 8 (Assignment -> ID = Expression ; .)


state 28

    (9) Expression -> Expression + . Term
    (11) Term -> . Term * Factor
    (12) Term -> . Factor
    (13) Factor -> . INTLIT
    (14) Factor -> . ID
    (15) Factor -> . ( Expression )

    INTLIT          shift and go to state 25
    ID              shift and go to state 21
    (               shift and go to state 26

    Term                           shift and go to state 31
    Factor                         shift and go to state 24

state 29

    (11) Term -> Term * . Factor
    (13) Factor -> . INTLIT
    (14) Factor -> . ID
    (15) Factor -> . ( Expression )

    INTLIT          shift and go to state 25
    ID              shift and go to state 21
    (               shift and go to state 26

    Factor                         shift and go to state 32

state 30

    (15) Factor -> ( Expression . )
    (9) Expression -> Expression . + Term

    )               shift and go to state 33
    +               shift and go to state 28


state 31

    (9) Expression -> Expression + Term .
    (11) Term -> Term . * Factor

    ;               reduce using rule 9 (Expression -> Expression + Term .)
    +               reduce using rule 9 (Expression -> Expression + Term .)
    )               reduce using rule 9 (Expression -> Expression + Term .)
    *               shift and go to state 29


state 32

    (11) Term -> Term * Factor .

    *               reduce using rule 11 (Term -> Term * Factor .)
    ;               reduce using rule 11 (Term -> Term * Factor .)
    +               reduce using rule 11 (Term -> Term * Factor .)
    )               reduce using rule 11 (Term -> Term * Factor .)


state 33

    (15) Factor -> ( Expression ) .

    *               reduce using rule 15 (Factor -> ( Expression ) .)
    ;               reduce using rule 15 (Factor -> ( Expression ) .)
    +               reduce using rule 15 (Factor -> ( Expression ) .)
    )               reduce using rule 15 (Factor -> ( Expression ) .)

